--- a/NFT-Mini-Marketplace/.gitignore
+++ b/NFT-Mini-Marketplace/.gitignore
@@ -3,3 +3,12 @@ node_modules
 #Hardhat files
 cache
 artifacts
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
