--- a/NFT-Mini-Marketplace/package.json
+++ b/NFT-Mini-Marketplace/package.json
@@ -6,17 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/test-helpers": "^0.5.10",
-    "hardhat-contract-sizer": "^2.0.3",
-    "web3": "^1.3.5"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.0.0",
-    "hardhat": "^2.2.0"
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@openzeppelin/contracts": "^4.4.1",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.3"
   }
 }
